# show_festival_program

./: .gitignore  REAMDE.md  index.html  package-lock.json  package.json
backend/: app.js  package-lock.json  package.json
backend/controllers/: festival.js  show.js  user.js
backend/middleware/: auth.js
backend/models/: festival.js  show.js
backend/routes/: festival.js  show.js
frontend/: index.html  package-lock.json  package.json  webpack.config.js
frontend/data/: etrange_festival_2022.json
frontend/scripts/: main.js
frontend/src/: index.html  index.js
frontend/style/: style.css
pipeline/: README.md  create_admin_user.py  data_gathering_anima.py  data_gathering_etrange_festival.py  data_gathering_gerarme_2024.py  data_gathering_gerarme_2024_llm.py  data_schema.py  ocr_pdf_file.py  pyproject.toml  tools.py
scripts/: main.js
style/: style.css
