[tool.poetry]
name = "pipeline"
version = "0.1.0"
description = ""
authors = ["jjublanc <johan.jublanc@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.31.0"
beautifulsoup4 = "^4.12.2"
pandas = "^2.1.4"
langchain = "^0.1.4"
langchain-openai = "^0.0.5"
python-dotenv = "^1.0.1"
playwright = "^1.41.1"
pypdf2 = "^3.0.1"
ocrmypdf = "^16.0.4"
pytesseract = "^0.3.10"
pdf2image = "^1.17.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
